// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step matches snapshot for active state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-green-500 bg-white"
  >
    <span
      class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
    >
      1
    </span>
    <span
      class="ml-2"
    >
      Active
    </span>
  </div>
</DocumentFragment>
`;

exports[`Step matches snapshot for complete state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 pb-4 pt-3 px-2 cursor-pointer text-gray-400 border-t-4 border-gray-400"
  >
    <svg
      class="w-7 h-7 flex-shrink-0 font-normal"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="ml-2"
    >
      Complete
    </span>
  </div>
</DocumentFragment>
`;

exports[`Step matches snapshot for default state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-transparent"
  >
    <span
      class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
    >
      1
    </span>
    <span
      class="ml-2"
    >
      Default
    </span>
  </div>
</DocumentFragment>
`;

exports[`Step matches snapshot for enabled state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-transparent"
  >
    <span
      class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
    >
      1
    </span>
    <span
      class="ml-2"
    >
      Default
    </span>
  </div>
</DocumentFragment>
`;
